--- a/8_QUEENS.ipynb
+++ b/8_QUEENS.ipynb
@@ -33,6 +33,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mZJNAftzeMMP"
+      },
+      "source": [
+        "### 安裝PyEda \r\n",
+        "https://pypi.org/project/pyeda/\r\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -44,7 +54,7 @@
       "source": [
         "!pip install pyeda"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -65,6 +75,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Sl6OkVFjhcrR"
+      },
+      "source": [
+        "### 導入PyEda interactive session"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "9SDm-mWjL1ak"
@@ -72,8 +91,21 @@
       "source": [
         "from pyeda.inter import *"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WDByeTGch5YQ"
+      },
+      "source": [
+        "X 為設置初始棋盤是8x8的網格,使用二維位向量。\r\n",
+        "\r\n",
+        "R 設置約束條件，每行(R)必須放置一個皇后。\r\n",
+        "\r\n",
+        "C 設置約束條件，每列(C)必須放置一個皇后。"
+      ]
     },
     {
       "cell_type": "code",
@@ -81,12 +113,21 @@
         "id": "LuXMM14TMGyX"
       },
       "source": [
-        " X=exprvars('x', 8, 8)\r\n",
-        " R=And(*[OneHot(*[X[r,c] for c in range(8)]) for r in range(8)])\r\n",
-        " C=And(*[OneHot(*[X[r,c] for r in range(8)]) for c in range(8)])"
+        " X =exprvars('x', 8, 8)\r\n",
+        " R =And(*[OneHot(*[X[r,c] for c in range(8)]) for r in range(8)])\r\n",
+        " C =And(*[OneHot(*[X[r,c] for r in range(8)]) for c in range(8)])"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Hcd3goMSkZR0"
+      },
+      "source": [
+        "設置獨立集合由下至上,左開始 帶入 DLR 左對角約束條件\r\n"
+      ]
     },
     {
       "cell_type": "code",
@@ -106,8 +147,17 @@
         "\r\n",
         "DLR = And(*[OneHot0(*[X[r,c] for r, c in diag]) for diag in lrdiags])"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fz4qBigyljTL"
+      },
+      "source": [
+        "設置獨立集合由下至上,右開始 帶入 DRL 右對角約束條件"
+      ]
     },
     {
       "cell_type": "code",
@@ -127,8 +177,17 @@
         "\r\n",
         "DRL = And(*[OneHot0(*[X[r,c] for r, c in diag]) for diag in rldiags])"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "k3qU26cIlyfT"
+      },
+      "source": [
+        "S 為使用And(&)將所有約束同時有效。"
+      ]
     },
     {
       "cell_type": "code",
@@ -138,64 +197,16 @@
       "source": [
         "S = R & C & DLR & DRL"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MEAWkRPbNCid",
-        "outputId": "d080201a-63ea-4722-b0d5-72bc10040c66"
+        "id": "-PHs6io_mPFM"
       },
       "source": [
-        "S.is_cnf()\r\n",
-        "# print(S)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 7
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "NZbg1_onNGqW",
-        "outputId": "f79238f9-9a16-4508-e5df-a6dadf1d6a37"
-      },
-      "source": [
-        "len(S.xs)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 8
-        }
+        "定義函數8Queens並使用chars(ASCII)轉換Q與."
       ]
     },
     {
@@ -204,7 +215,7 @@
         "id": "1gXT20FDKxnf"
       },
       "source": [
-        "def display(point):\r\n",
+        "def 8Queens(point):\r\n",
         "\tchars = list()\r\n",
         "\tfor r in range(8):\r\n",
         "\t    for c in range(8):\r\n",
@@ -216,8 +227,17 @@
         "\t        chars.append(\"\\n\")\r\n",
         "\tprint(\"\".join(chars))"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "585kpQ23nhYV"
+      },
+      "source": [
+        "使用satisfy_one(PicoSAT SAT)的解算器,依據我們帶入的條件約束來取得解法"
+      ]
     },
     {
       "cell_type": "code",
@@ -229,9 +249,9 @@
         "outputId": "7d13933f-b44d-4e43-cd83-9f5b5077a044"
       },
       "source": [
-        "display(S.satisfy_one())"
+        "8Queens(S.satisfy_one())"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
